--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "crh-homedir-packages",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "Things Craig has installed under his user account: CLI tools and common libs",
   "dependencies": {
     "html2jade": "=0.x",
     "htmllint-cli": "=0.x",
     "jshint": "=2.x",
-    "lazy.js": "=0.x",
+    "underscore": "=1.x",
     "moment": "=2.x",
     "npm-check-updates": "=2.x",
     "teslams": "=1.x",
     "vtop": "=0.x"
   },
-  "author": "Craig Hughes"
+  "author": "Craig Hughes",
+  "repository": "hughescr/crh-homedir-packages",
+  "license": "MIT"
 }
