--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "crh-homedir-packages",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Things Craig has installed under his user account: CLI tools and common libs",
   "dependencies": {
     "html2jade": "=0.x",
     "htmllint-cli": "=0.x",
     "jshint": "=2.x",
-    "underscore": "=1.x",
+    "lodash": "=4.x",
     "moment": "=2.x",
     "npm-check-updates": "=2.x",
     "teslams": "=1.x",
