--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "crh-homedir-packages",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Things Craig has installed under his user account: CLI tools and common libs",
   "dependencies": {
+    "grunt-cli": "=0.x",
     "html2jade": "=0.x",
     "htmllint-cli": "=0.x",
     "jshint": "=2.x",
