--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jshint": "=2.x",
     "lodash": "=4.x",
     "moment": "=2.x",
+    "moment-timezone": "^0.5.1",
     "npm-check-updates": "=2.x",
     "teslams": "=1.x",
     "vtop": "=0.x"
