Use caret versioning

--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "1.5.1",
   "description": "Things Craig has installed under his user account: CLI tools and common libs",
   "dependencies": {
-    "grunt-cli": "=1.x",
-    "html2jade": "=0.x",
-    "htmllint-cli": "=0.x",
-    "jshint": "=2.x",
-    "lodash": "=4.x",
-    "moment": "=2.x",
+    "bower": "^1.7.9",
+    "grunt-cli": "^1.x",
+    "html2jade": "^0.x",
+    "htmllint-cli": "^0.x",
+    "jshint": "^2.x",
+    "lodash": "^4.x",
+    "moment": "^2.x",
     "moment-timezone": "^0.5.1",
-    "npm-check-updates": "=2.x",
-    "smoketail": "~0.1.0",
-    "teslams": "=1.x",
-    "vtop": "=0.x"
+    "npm-check-updates": "^2.x",
+    "smoketail": "^0.1.0",
+    "teslams": "^1.x",
+    "vtop": "^0.x"
   },
   "author": "Craig Hughes",
   "repository": "hughescr/crh-homedir-packages",
