Add yo and generator-ng-fullstack

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.5.1",
   "description": "Things Craig has installed under his user account: CLI tools and common libs",
   "dependencies": {
+    "generator-ng-fullstack": "^1.8.5",
     "gh": "^1.12.6",
     "grunt-cli": "^1.x",
     "html2jade": "^0.x",
@@ -13,7 +14,8 @@
     "npm-check-updates": "^2.x",
     "smoketail": "^0.1.0",
     "teslams": "^1.x",
-    "vtop": "^0.x"
+    "vtop": "^0.x",
+    "yo": "^1.8.3"
   },
   "author": "Craig Hughes",
   "repository": "hughescr/crh-homedir-packages",
