--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
-    "name": "crh-homedir-packages",
-    "version": "1.5.1",
-    "description": "Things Craig has installed under his user account: CLI tools and common libs",
-    "scripts":
-    {
-        "preversion": "git flow release start $npm_package_version",
-        "postversion": "git commit -m \"Bump package version to $npm_package_version\" package.json; git flow release finish -m $npm_package_version $npm_package_version; git checkout develop; git rebase master"
-    },
-    "dependencies":
-    {
-        "@hughescr/generator-node-basic": "^1.0.0",
-        "generator-ng-fullstack": "^1.8.5",
-        "gh": "^1.12.6",
-        "grunt-cli": "^1.x",
-        "html2jade": "^0.x",
-        "htmllint-cli": "^0.x",
-        "lodash": "^4.x",
-        "moment": "^2.x",
-        "moment-timezone": "^0.5.1",
-        "npm-check-updates": "^2.x",
-        "smoketail": "^0.1.0",
-        "teslams": "^1.x",
-        "vtop": "^0.x",
-        "yo": "^1.8.3"
-    },
-    "author": "Craig Hughes",
-    "repository": "hughescr/crh-homedir-packages",
-    "license": "MIT"
+  "name": "crh-homedir-packages",
+  "version": "1.5.2",
+  "description": "Things Craig has installed under his user account: CLI tools and common libs",
+  "scripts": {
+    "preversion": "git flow release start $npm_package_version",
+    "postversion": "git commit -m \"Bump package version to $npm_package_version\" package.json; git flow release finish -m $npm_package_version $npm_package_version; git checkout develop; git rebase master"
+  },
+  "dependencies": {
+    "@hughescr/generator-node-basic": "^1.0.0",
+    "generator-ng-fullstack": "^1.8.5",
+    "gh": "^1.12.6",
+    "grunt-cli": "^1.x",
+    "html2jade": "^0.x",
+    "htmllint-cli": "^0.x",
+    "lodash": "^4.x",
+    "moment": "^2.x",
+    "moment-timezone": "^0.5.1",
+    "npm-check-updates": "^2.x",
+    "smoketail": "^0.1.0",
+    "teslams": "^1.x",
+    "vtop": "^0.x",
+    "yo": "^1.8.3"
+  },
+  "author": "Craig Hughes",
+  "repository": "hughescr/crh-homedir-packages",
+  "license": "MIT"
 }
