--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postversion": "git commit -m \"Bump package version to $npm_package_version\" package.json; git flow release finish -m $npm_package_version $npm_package_version; git checkout develop; git rebase master"
   },
   "dependencies": {
+    "@hughescr/generator-aws-lambda": "^1.1.1",
     "@hughescr/generator-node-basic": "^1.0.0",
     "generator-ng-fullstack": "^1.8.5",
     "gh": "^1.12.6",
