--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "1.7.0",
+  "version": "1.8.0",
   "description": "Things Craig has installed under his user account: CLI tools and common libs",
   "scripts": {
     "preversion": "git flow release start $npm_package_version",
@@ -23,6 +23,7 @@
     "moment-timezone": "^0.5.1",
     "npm-check-updates": "^2.x",
     "smoketail": "^0.1.0",
+    "swagger": "^0.7.5",
     "teslams": "^1.x",
     "vtop": "^0.x",
     "yo": "^1.8.3"
