--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.x",
     "moment-timezone": "^0.5.1",
     "npm-check-updates": "^2.x",
+    "serverless": "^1.1.0",
     "smoketail": "^0.1.0",
     "swagger": "^0.7.5",
     "teslams": "^1.x",
