--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hughescr/generator-aws-lambda": "^1.3.0",
     "@hughescr/generator-node-basic": "^1.1.0",
+    "firebase-tools": "^3.2.0",
     "flow-typed": "^2.0.0",
     "generator-ng-fullstack": "^1.8.39",
     "gh": "^1.12.8",
