--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   "dependencies": {
     "@hughescr/generator-aws-lambda": "^1.3.0",
     "@hughescr/generator-node-basic": "^1.1.0",
-    "firebase-tools": "^3.6.1",
+    "firebase-tools": "^3.9.1",
     "flow-typed": "^2.1.2",
-    "generator-ng-fullstack": "^1.9.14",
+    "generator-ng-fullstack": "^1.9.18",
     "gh": "^1.12.8",
     "html2jade": "^0.x",
     "htmllint-cli": "^0.x",
     "lodash": "^4.x",
     "moment": "^2.x",
     "moment-timezone": "^0.5.13",
-    "newman": "^3.5.2",
-    "npm-check-updates": "^2.x",
-    "serverless": "^1.12.1",
+    "newman": "^3.6.0",
+    "npm-check-updates": "^2.11.2",
+    "serverless": "^1.14.0",
     "smoketail": "^0.1.0",
     "teslams": "^1.x",
     "vtop": "^0.x",
