Update yarn packages

--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "@hughescr/generator-aws-lambda": "^2.0.1",
     "@hughescr/generator-node-basic": "^2.0.1",
     "copy-github-labels-cli": "^1.0.0",
-    "flow-bin": "^0.74.0",
+    "flow-bin": "^0.75.0",
     "flow-typed": "^2.2.0",
-    "gh": "^1.12.8",
+    "gh": "^1.12.12",
     "html2jade": "^0.x",
     "htmllint-cli": "^0.x",
     "lodash": "^4.x",
     "moment": "^2.22.2",
-    "moment-timezone": "^0.5.17",
+    "moment-timezone": "^0.5.21",
     "newman": "^3.9.4",
     "npm-check-updates": "^2.13.0",
     "serverless": "^1.27.3",
     "smoketail": "^0.1.0",
     "teslams": "^1.x",
-    "vtop": "^0.x",
-    "yo": "^2.0.0"
+    "vtop": "^0.6.0",
+    "yo": "^2.0.3"
   },
   "author": "Craig Hughes",
   "repository": "hughescr/crh-homedir-packages",
