--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "@hughescr/generator-aws-lambda": "^2.0.1",
     "@hughescr/generator-node-basic": "^2.0.1",
     "copy-github-labels-cli": "^1.0.0",
-    "flow-bin": "^0.83.0",
+    "flow-bin": "^0.89.0",
     "flow-typed": "^2.5.1",
     "gh": "^1.13.5",
     "htmllint-cli": "^0.x",
     "lodash": "^4.17.11",
-    "moment": "^2.22.2",
-    "moment-timezone": "^0.5.21",
+    "moment": "^2.23.0",
+    "moment-timezone": "^0.5.23",
     "smoketail": "^0.1.0",
-    "teslams": "^1.x",
+    "teslams": "^1.3.0",
     "vtop": "^0.6.1",
     "yo": "^2.0.5"
   },
