--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
+    "mscgenjs-cli": "^2.1.14",
     "smoketail": "^0.1.0",
     "teslams": "^1.3.0",
     "vtop": "^0.6.1",
