--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   },
   "version": "1.14.1",
   "description": "Things Craig has installed under his user account: CLI tools and common libs",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postversion": "git commit -m \"Bump package version to $npm_package_version\" package.json; git flow release start $npm_package_version; git flow release finish -m $npm_package_version $npm_package_version; git checkout develop; git merge master"
+  },
   "dependencies": {
     "@hughescr/generator-aws-lambda": "^2.0.1",
     "@hughescr/generator-node-basic": "^2.0.1",
