--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@hughescr/generator-aws-lambda": "^2.0.1",
     "@hughescr/generator-node-basic": "^2.0.1",
+    "corona-cli": "^3.8.6",
     "fast-cli": "^2.3.0",
-    "flow-bin": "^0.118.0",
-    "flow-typed": "^2.6.2",
+    "flow-bin": "^0.121.0",
+    "flow-typed": "^3.1.0",
     "htmllint-cli": "^0.x",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "moment-timezone": "^0.5.27",
+    "moment-timezone": "^0.5.28",
     "smoketail": "^0.2.2",
     "teslajs": "^4.7.7",
     "vtop": "^0.6.1",
