--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "postversion": "git commit -m \"Bump package version to $npm_package_version\" package.json; git flow release start $npm_package_version; git flow release finish -m $npm_package_version $npm_package_version; git checkout develop; git merge master"
   },
   "dependencies": {
-    "corona-cli": "^5.3.3",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "moment-timezone": "^0.5.32",
+    "moment-timezone": "^0.5.33",
+    "serverless": "^2.28.7",
     "smoketail": "^0.2.2",
-    "teslajs": "^4.9.7",
+    "teslajs": "^4.9.8",
     "vtop": "^0.6.1"
   },
   "author": "Craig Hughes",
